modified a text-color and add few lines

--- a/colors.html
+++ b/colors.html
@@ -7,7 +7,7 @@
 			 }
 	#rhyme2{
 	         text-align:center;
-             color:Red;			 
+             color:green;			 
 	       }
      #rhyme3
 		   {
@@ -36,6 +36,8 @@
 	   Jhony jhony yes papa
 	   Eating sugar ? 
 	   No , papa.
+	   Telling a lie ? 
+	   No Papa ! 
 	   </pre>
 </body>
 
